[gd_scene load_steps=14 format=3 uid="uid://c0urr1kvruca5"]

[ext_resource type="PackedScene" uid="uid://4782h1nb1gdn" path="res://world_scenes/world.tscn" id="1_ftsmm"]
[ext_resource type="PackedScene" uid="uid://dmghoe2d56v1q" path="res://UI/text box.tscn" id="2_dl4i7"]
[ext_resource type="Script" path="res://Models/player_character.gd" id="3_7u7lf"]
[ext_resource type="Texture2D" uid="uid://2xsqniunpkcp" path="res://character_textures/CrazyWizard.png" id="4_1ikv1"]
[ext_resource type="Texture2D" uid="uid://cgrym2egrmtnr" path="res://character_textures/GreenMonk.png" id="5_nd31u"]
[ext_resource type="Script" path="res://Models/dialog_interactor.gd" id="6_jcf83"]

[sub_resource type="BoxShape3D" id="BoxShape3D_n608q"]
size = Vector3(0.629822, 0.286682, 0.421738)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ohqmx"]
radius = 0.15
height = 0.599091

[sub_resource type="Animation" id="Animation_hfnv5"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 9, 10]
}

[sub_resource type="Animation" id="Animation_kc37v"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5nvcg"]
_data = {
"idle": SubResource("Animation_hfnv5"),
"walk": SubResource("Animation_kc37v")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_lhnic"]
size = Vector3(0.344116, 1, 0.445557)

[sub_resource type="GDScript" id="GDScript_rkjkm"]
script/source = "extends InteractionScript

var names = [\"PC\", \"Dev\", \"Player\"]

# Called when the PC requests interaction
func _start_interaction(gui: DialogUi):
	await gui.show_text(\"Hi there!. Press continue for reading more\");
	await gui.show_text(\"Well done!. My name is NPC, introduce yourself\");
	var chosen_ind = await gui.show_selection(\"Choose name:\", names);
	await gui.show_text(\"Nice to meet you \" + names[chosen_ind - 1])

"

[node name="main" type="Node3D"]

[node name="World" parent="." instance=ExtResource("1_ftsmm")]

[node name="gui_control" parent="." instance=ExtResource("2_dl4i7")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="player_character" type="CharacterBody3D" parent="." node_paths=PackedStringArray("gui_node")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.30389, 0)
floor_snap_length = 0.15
script = ExtResource("3_7u7lf")
gui_node = NodePath("../gui_control")

[node name="interaction_area" type="Area3D" parent="player_character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718908, 0, 0.168132)

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_character/interaction_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00793457, 0.0247498, 0.00576782)
shape = SubResource("BoxShape3D_n608q")

[node name="Camera3D" type="Camera3D" parent="player_character"]
transform = Transform3D(1, 0, 0, 0, 0.707489, 0.706724, 0, -0.706724, 0.707489, 0.695114, 1.21173, 1.28172)

[node name="CollisionShape3D" type="CollisionShape3D" parent="player_character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.721495, 0, 0.166473)
shape = SubResource("CapsuleShape3D_ohqmx")

[node name="player_sprite" type="Sprite3D" parent="player_character"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.721495, 0, 0.166473)
pixel_size = 0.02
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("4_1ikv1")
hframes = 10
vframes = 5
frame = 10

[node name="character_animation" type="AnimationPlayer" parent="player_character"]
root_node = NodePath("../player_sprite")
libraries = {
"": SubResource("AnimationLibrary_5nvcg")
}
autoplay = "idle"

[node name="npc_1" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.183228, 0.619204, 4.36987)
floor_snap_length = 0.15

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.721495, 0, 0.166473)
shape = SubResource("CapsuleShape3D_ohqmx")

[node name="player_sprite" type="Sprite3D" parent="npc_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.721495, 0, 0.166473)
pixel_size = 0.02
shaded = true
alpha_cut = 1
texture_filter = 0
texture = ExtResource("5_nd31u")
hframes = 10
vframes = 5
frame = 10

[node name="character_animation" type="AnimationPlayer" parent="npc_1"]
root_node = NodePath("../player_sprite")
libraries = {
"": SubResource("AnimationLibrary_5nvcg")
}
autoplay = "idle"

[node name="interaction_area" type="Area3D" parent="npc_1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.718908, 0, 0.168132)

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc_1/interaction_area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0193177, 0.0247498, -0.00699615)
shape = SubResource("BoxShape3D_n608q")

[node name="DialogInteractor" type="Area3D" parent="npc_1" node_paths=PackedStringArray("interaction_node")]
script = ExtResource("6_jcf83")
interaction_node = NodePath("../InteractionScript")

[node name="CollisionShape3D" type="CollisionShape3D" parent="npc_1/DialogInteractor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.726289, 0, 0.194657)
shape = SubResource("BoxShape3D_lhnic")

[node name="InteractionScript" type="Node" parent="npc_1"]
script = SubResource("GDScript_rkjkm")
